Various changes     Added disclaimer/license based on nodejs license     Documentation for some functions     Cleaned up unused code     Rewrote player and status using async (now functional)     Other minor changes     Added more settings to config.json

--- a/config.json
+++ b/config.json
@@ -5,5 +5,8 @@
     "sqlitedb" : "C:/gameservers/scstats/scstats.db",
     "gameserverip" : "",
     "gameserverport" : "",
-    "gstimeout" : "5000"
+    "gstimeout" : "5000",
+    "chatchannel" : "",
+    "commchannel" : "",
+    "statuschannel" : ""
 }
