Huge update!    - Added a global handler to hold any unhandled errors    - Added chat relay feature using Nico's ChatBridge plugin, as well as map status    - Bot now update its status every x seconds with server map and players    - Steam API errors won't crash anymore    - Added trade ban status to the player query    - Sourcequery now closes outgoing port after querying a server    - Added a restart command to restart the bot in case of issues    - Other minor changes and comments
NEEDS CLEANUP!!!

--- a/config.json
+++ b/config.json
@@ -3,10 +3,12 @@
     "prefix" : "!",
     "steamapikey" : "",
     "sqlitedb" : "C:/gameservers/scstats/scstats.db",
-    "gameserverip" : "",
-    "gameserverport" : "",
-    "gstimeout" : "5000",
+    "gameserverip" : "191.232.179.200",
+    "gameserverport" : "1337",
+    "gstimeout" : "1000",
     "chatchannel" : "",
     "commchannel" : "",
-    "statuschannel" : ""
+    "statuschannel" : "",
+	"modsrole" : ""
+	
 }
