--- a/app/modules/baseclass.js.sample
+++ b/app/modules/baseclass.js.sample
@@ -42,6 +42,7 @@ class classname {
         this.m_guildonly = false; // Can only be used at channel or over pm too
         this.m_hidden = false; // [redacted]
         this.m_usage = this.m_multilang('ML_MODULENAME_USAGE'); // How to use this command
+        this.m_owneronly = false; // Only owner can use (needs owneruid in bot.json)
         this.m_cooldown = 5; // Delay between usage again
         this.m_permissions = ['ADMINISTRATOR', 'SEND_TTS_MESSAGES']; // Users with such permissions will be allowed to use (1st check)
         this.m_allowedroles = ['role1', 'role2..']; // Users with such roles will be allowed to use (2nd check)
