--- a/app/modules/baseclass.js.sample
+++ b/app/modules/baseclass.js.sample
@@ -31,22 +31,22 @@
 // Static module imports
 const multilang = require('multi-lang');
 
-class classname {
+module.exports = class classname {
     constructor(bot) {
-        this.m_multilang = multilang(`./app/lang/MODULENAME.json`, bot.m_lang, false);
+        this.multilang = multilang(`./app/lang/MODULENAME.json`, bot.lang, false);
 
-        this.m_command = 'command'; // Main command
-        this.m_aliases = ['alias1', 'alias2..']; // Command aliases
-        this.m_description = this.m_multilang('ML_MODULENAME_DESCRIPTION'); // Brief description
-        this.m_args = true; // Requires arguments or not
-        this.m_guildonly = false; // Can only be used at channel or over pm too
-        this.m_hidden = false; // [redacted]
-        this.m_usage = this.m_multilang('ML_MODULENAME_USAGE'); // How to use this command
-        this.m_owneronly = false; // Only owner can use (needs owneruid in bot.json)
-        this.m_cooldown = 5; // Delay between usage again
-        this.m_permissions = ['ADMINISTRATOR', 'SEND_TTS_MESSAGES']; // Users with such permissions will be allowed to use (1st check)
-        this.m_allowedroles = ['role1', 'role2..']; // Users with such roles will be allowed to use (2nd check)
-        this.m_denyroles = ['wanker', 'punished']; // Users with such roles will be DENIED to use (3rd check)
+        this.command = 'command'; // Main command
+        this.aliases = ['alias1', 'alias2..']; // Command aliases
+        this.description = this.multilang('ML_MODULENAME_DESCRIPTION'); // Brief description
+        this.args = true; // Requires arguments or not
+        this.guildonly = false; // Can only be used at channel or over pm too
+        this.hidden = false; // [redacted]
+        this.usage = this.multilang('ML_MODULENAME_USAGE'); // How to use this command
+        this.owneronly = false; // Only owner can use (needs owneruid in bot.json)
+        this.cooldown = 5; // Delay between usage again
+        this.permissions = ['ADMINISTRATOR', 'SEND_TTS_MESSAGES']; // Users with such permissions will be allowed to use (1st check)
+        this.allowedroles = ['role1', 'role2..']; // Users with such roles will be allowed to use (2nd check)
+        this.denyroles = ['wanker', 'punished']; // Users with such roles will be DENIED to use (3rd check)
     }
     Init() {
         // Do something when loading module
@@ -59,5 +59,3 @@ class classname {
         // Do something after command match
     }
 }
-
-module.exports = classname;
