--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@discordjs/uws": "^11.149.1",
     "bufferutil": "^4.0.1",
     "discord.js": "^11.4.2",
+	"emoji-to-short-name": "^1.0.1",
     "erlpack": "github:discordapp/erlpack",
     "libsodium-wrappers": "^0.7.4",
     "multi-lang": "^0.1.2",
