Update package dependencies and remove optional ones.

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "GutsV2",
-  "version": "2.0.0-Beta1",
+  "name": "HLDM-BR.NET Bot",
+  "version": "2.0.0",
   "description": "Discord bot that can do things for HLDM-BR.NET",
   "main": "app/index.js",
   "scripts": {
@@ -18,16 +18,14 @@
   "homepage": "https://hldm-br.net",
   "dependencies": {
     "@discordjs/uws": "^11.149.1",
-    "bufferutil": "^4.0.1",
-    "discord.js": "^11.4.2",
-	"emoji-to-short-name": "^1.0.1",
+    "discord.js": "github:discordjs/discord.js",
+    "emoji-to-short-name": "^1.0.1",
     "erlpack": "github:discordapp/erlpack",
-    "libsodium-wrappers": "^0.7.4",
     "multi-lang": "^0.1.2",
-    "node-opus": "^0.3.1",
-    "opusscript": "0.0.6",
+    "node-opus": "^0.3.2",
     "sodium": "^3.0.2",
-    "zlib-sync": "^0.1.4"
+    "zlib-sync": "^0.1.5",
+    "zucc": "^0.1.2"
   },
   "devDependencies": {}
 }
