- Cosmetic changes - Remove guts references since this has nothing to do with the actual anime lol (inside joke at HLDMBR Discord)

--- a/app/modules/baseclass.js.sample
+++ b/app/modules/baseclass.js.sample
@@ -1,7 +1,7 @@
 /**
- * Guts - A Discord bot made for HLDM-BR.NET.
+ * Discord bot made for HLDM-BR.NET.
  * 
- * MODULENAME module for Guts
+ * MODULENAME module
  * 
  * MIT License
  * 
